fixed text align and frame rate for ticker

--- a/source/scss/blocks/game.scss
+++ b/source/scss/blocks/game.scss
@@ -71,20 +71,21 @@
 }
 
 .game__counter {
-  margin: 0;
   text-transform: uppercase;
   font-family: $font-alt;
   font-weight: 400;
   font-size: 4.8rem;
   line-height: 0.906;
   letter-spacing: 0;
+  min-width: 12rem;
+
 
   @media (min-width: $stop-scaling) {
     font-size: 48px;
   }
 
   @media (min-width: $tablet) {
-    margin-right: 5.6rem;
+    margin-right: 4.6rem;
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
